--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     ></script>
 
     <!-- mycss -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://github.com/OgieC/dway.github.io/style.css" />
     <!-- akhir my css -->
 
     <title>Drinkway Indonesia</title>
@@ -36,7 +36,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"> <img src="img/logo.jpg" width="60" height="30" class="d-inline-block align-top" alt="logo" /> Drinkway Indonesia</a>
+        <a class="navbar-brand" href="#"> <img src="OgieC/dway.github.io/img/logo.jpg" width="60" height="30" class="d-inline-block align-top" alt="logo" /> Drinkway Indonesia</a>
         <button
           class="navbar-toggler"
           type="button"
