--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     ></script>
 
     <!-- mycss -->
-    <link rel="stylesheet" href="https://github.com/OgieC/dway.github.io/style.css" />
+    <link rel="stylesheet" href="https://github.com/OgieC/dway.github.io/styles.css" />
     <!-- akhir my css -->
 
     <title>Drinkway Indonesia</title>
