--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     ></script>
 
     <!-- mycss -->
-    <link rel="stylesheet" href="https://github.com/OgieC/dway.github.io/styles.css" />
+    <link rel="stylesheet" href="https://github.com/OgieC/dway.github.io/blob/95e0235f46957f0089b86f26bf60a1723f70b627/styles.css" />
     <!-- akhir my css --> 
 
     <title>Drinkway Indonesia</title>
